update pom.xml